<resources>
    <string name="app_name">safely</string>

    <!-- Main safely help string -->
    <string name="prefix_alert_text">ALERT! I might be in danger, if I do not text back in 5 minutes please call an emergency line. </string>

    <string name="location_time_text">I was in this location, %1$s
        \n at this time: %2$s
        \n Sent by safe.ly</string>

    <string name="sms_sent_placeholder">Message sent to %1$s&#8230;</string>

    <!-- Welcome screens info text -->
    <string name="welcome_screen_1_text">safe.ly let\'s you send an alert message in situations of danger to all your chosen emergency contacts instantly, with the press of the safe.ly button.</string>
    <string name="welcome_screen_2_text">Just add your favorite emergency contacts stored in your phone.</string>
    <string name="welcome_screen_3_text">When you feel in danger, keep the app open and press the button for at least 4 seconds. Your contacts will be alerted with your location and time sent.</string>

    <string name="sms_permission_button">Give SMS permission</string>
    <string name="try_out_text">Try it out!</string>
    <string name="welcome_screen_4_text">Don\'t forget to text them back if it was a false alarm! \n Tap anywhere to start.</string>

    <string name="start_button_welcome">Start using safe.ly</string>

    <!-- Main Activity strings-->
    <string name="content_description_contact_action">contacts</string>
    <string name="content_description_share_action">share</string>
    <string name="content_description_cancel_action">Cancel</string>
    <string name="toolbar_title">safe.ly</string>
    <string name="contact_button">Add Contact</string>

    <string name="share_text">Hey, check out this app to help you stay safe.</string>
    <string name="share_chooser_title">Share App</string>

    <string name="welcome_message">An app to help you get places safe.</string>

    <string name="timer_message_bubble">Sending emergency texts in %1$d&#8230;</string>

    <!-- Contacts fragment strings -->
    <string name="contacts_fragment_title">contacts</string>
    <string name="add_contacts_prompt">Add Emergency Contacts Here</string>

    <string name="name_placeholder_string">%1$s</string>
    <string name="number_placeholder_string">%1$s</string>
    <string name="empty_contacts_text">There are no contacts yet. Use the add button in the main screen</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Preference screen strings -->
    <string name="call_emergency_title">Dial Emergency Services</string>
    <string name="call_emergency_number">Emergency Number to Dial</string>
    <string name="default_emergency_number">112</string>

    <string name="edit_default_alert_message">Edit Alert Message</string>
    <string name="default_text_value">Use Default Text</string>

    <string name="settings_title">Settings</string>

    <string name="main_category">Main Settings</string>
    <string name="about_category">About</string>

    <string name="start_welcome_screen">Show Welcome Screens Again?</string>
    <string name="share_setting_title">Share safe.ly with friends</string>
    <string name="app_info">safe.ly v1.0
        \n\nMade with Kotlin &#128522; &#x1F483;
        \nCredit to freepik.com</string>

    <!-- Emergency Service numbers -->
    <string name="europe_em_num">112</string>
    <string name="us_em_num">911</string>
    <string name="china_em_num">110</string>
    <string name="hongkong_em_num">999</string>
    <string name="india_em_num">100</string>
    <string name="israel_em_num">100</string>
    <string name="japan_em_num">110</string>
    <string name="korea_em_num">110</string>
    <string name="singapore_em_num">999</string>
    <string name="australia_em_num">911</string>
    <string name="southafrica_em_num">10111</string>
    <string name="morocco_em_num">19</string>
</resources>
