<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_activity_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity"
    android:animateLayoutChanges="true">

    <android.support.v7.widget.Toolbar
        android:id="@+id/main_activity_toolbar"
        android:layout_width="0dp"
        android:layout_height="@dimen/toolbar_height"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/main_activity_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toolbar_title"
            android:layout_gravity="center"
            style="@style/ToolbarTitle"/>

        <ImageButton
            android:contentDescription="@string/content_description_share_action"
            android:id="@+id/share_action_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/general_margin"
            android:paddingBottom="@dimen/general_margin"
            android:paddingEnd="@dimen/general_margin"
            android:src="@drawable/ic_share_variant"
            android:tint="@color/colorPrimaryDark"
            android:background="?attr/selectableItemBackgroundBorderless"/>

        <ImageButton
            android:contentDescription="@string/content_description_contact_action"
            android:id="@+id/contacts_menu_action_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/double_general_margin"
            android:paddingTop="@dimen/general_margin"
            android:paddingBottom="@dimen/general_margin"
            android:src="@drawable/ic_menu"
            android:tint="@color/colorPrimaryDark"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/general_margin"/>
    </android.support.v7.widget.Toolbar>

    <Button
        android:id="@+id/safely_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/circle_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <View
        android:id="@+id/safely_press_expand"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/circle_button"
        app:layout_constraintStart_toStartOf="@id/safely_button"
        app:layout_constraintEnd_toEndOf="@id/safely_button"
        app:layout_constraintTop_toTopOf="@id/safely_button"
        app:layout_constraintBottom_toBottomOf="@id/safely_button" />

    <Button
        android:id="@+id/add_contact_action_button"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/contact_button_height"
        android:background="@drawable/rounded_button_stateful"
        android:text="@string/contact_button"
        android:paddingEnd="@dimen/contact_button_margin_start"
        android:paddingStart="@dimen/contact_button_margin_start"
        android:layout_marginBottom="@dimen/general_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/ContactButton" />

    <com.android.lightmass.safely.ui.MyFragmentFrameLayout
        android:id="@+id/contacts_fragment_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="@id/main_activity_toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/open_contacts_drawer_guideline"
        android:elevation="8dp">

        <ImageButton
            android:contentDescription="@string/content_description_cancel_action"
            android:id="@+id/slide_contacts_action"
            android:layout_width="@dimen/icon_dimen"
            android:layout_height="match_parent"
            android:paddingStart="@dimen/general_margin"
            android:src="@drawable/ic_chevron_right"
            android:tint="@color/colorPrimaryDark"
            android:background="?attr/selectableItemBackground"
            android:elevation="10dp"
            android:layout_gravity="center_vertical"/>

        <fragment
            android:id="@+id/contacts_fragment_drawer"
            android:name="com.android.lightmass.safely.ui.ContactsFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.android.lightmass.safely.ui.MyFragmentFrameLayout>

    <android.support.constraint.Guideline
        android:id="@+id/open_contacts_drawer_guideline"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2"/>

    <View
        android:id="@+id/dark_screen"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:elevation="6dp"
        android:alpha="0"/>

    <LinearLayout
        android:id="@+id/message_bubble_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/general_margin"
        app:layout_constraintTop_toBottomOf="@id/safely_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/add_contact_action_button"
        android:animateLayoutChanges="true"
        android:orientation="vertical"/>
</android.support.constraint.ConstraintLayout>